; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_spellfix.c_editDist3Install.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_spellfix.c_editDist3Install.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_NOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"editdist3\00", align 1
@SQLITE_UTF8 = common dso_local global i32 0, align 4
@SQLITE_DETERMINISTIC = common dso_local global i32 0, align 4
@editDist3SqlFunc = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@editDist3ConfigDelete = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @editDist3Install to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @editDist3Install(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = call i32* @sqlite3_malloc64(i32 4)
  store i32* %6, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %10, i32* %2, align 4
  br label %50

11:                                               ; preds = %1
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @memset(i32* %12, i32 0, i32 4)
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* @SQLITE_UTF8, align 4
  %16 = load i32, i32* @SQLITE_DETERMINISTIC, align 4
  %17 = or i32 %15, %16
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* @editDist3SqlFunc, align 4
  %20 = call i32 @sqlite3_create_function_v2(i32* %14, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 2, i32 %17, i32* %18, i32 %19, i32 0, i32 0, i32 0)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @SQLITE_OK, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %32

24:                                               ; preds = %11
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @SQLITE_UTF8, align 4
  %27 = load i32, i32* @SQLITE_DETERMINISTIC, align 4
  %28 = or i32 %26, %27
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* @editDist3SqlFunc, align 4
  %31 = call i32 @sqlite3_create_function_v2(i32* %25, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 3, i32 %28, i32* %29, i32 %30, i32 0, i32 0, i32 0)
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %24, %11
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* @SQLITE_OK, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %45

36:                                               ; preds = %32
  %37 = load i32*, i32** %3, align 8
  %38 = load i32, i32* @SQLITE_UTF8, align 4
  %39 = load i32, i32* @SQLITE_DETERMINISTIC, align 4
  %40 = or i32 %38, %39
  %41 = load i32*, i32** %5, align 8
  %42 = load i32, i32* @editDist3SqlFunc, align 4
  %43 = load i32, i32* @editDist3ConfigDelete, align 4
  %44 = call i32 @sqlite3_create_function_v2(i32* %37, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 1, i32 %40, i32* %41, i32 %42, i32 0, i32 0, i32 %43)
  store i32 %44, i32* %4, align 4
  br label %48

45:                                               ; preds = %32
  %46 = load i32*, i32** %5, align 8
  %47 = call i32 @sqlite3_free(i32* %46)
  br label %48

48:                                               ; preds = %45, %36
  %49 = load i32, i32* %4, align 4
  store i32 %49, i32* %2, align 4
  br label %50

50:                                               ; preds = %48, %9
  %51 = load i32, i32* %2, align 4
  ret i32 %51
}

declare dso_local i32* @sqlite3_malloc64(i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @sqlite3_create_function_v2(i32*, i8*, i32, i32, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @sqlite3_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
